[package]
name = "gagaku_fjs_native_module"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
base64-simd = "0.8.0"
crc32fast = "1.5.0"
fjs_native_extensions = { git = "https://github.com/r52/fjs_native_extensions.git", branch = "main" }
flate2 = { version = "1.1.8", default-features = false, features = ["zlib-rs"] }
image = "0.25"
linkme = "0.3"
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", rev = "2e98651deac9d7e1746b5d9dfbed1cdf5cf268c4", version = "0.11.0", features = ["full-async", "bindgen", "loader", "dyn-load", "parallel", "macro", "futures"] }
